[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "terasim"
version = "0.1.0"
description = "Generative AV testing environment for unknown unsafe events discovery"
authors = [ "Haowei Sun <haoweis@umich.edu>", "Haojie Zhu <zhuhj@umich.edu>", "Zhijie Qiao <zhijieq@umich.edu>", "Xintao Yan <xintaoy@umich.edu>", "Shuo Feng <fshuo@umich.edu>",]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
bidict = "^0.23.1"
attrs = "^23.2.0"
addict = "^2.4.0"
scipy = "^1.11.4"
eclipse-sumo = "~1.19.0"
traci = "~1.19.0"
libsumo = "~1.19.0"
sumolib = "~1.19.0"
redis = "^5.0.2"
lxml = "^5.1.0"
pydantic = "^2.6.3"
pyproj = "^3.6.1"
rtree = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=terasim --cov-report=term-missing"
